--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -80,6 +80,8 @@
 }
 @media (min-width: 1280px) {
 	.container {
+		padding-left: 0;
+		padding-right: 0;
 		max-width: var(--container);
 	}
 }
