--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  * Tags:         blog, news, portfolio, grid-layout, one-column, two-columns, three-columns, left-sidebar, right-sidebar, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, microformats, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks
  */
 :root {
-	--container: 1134px;
+	--container: 1110px;
 	--font-sans: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 	--font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 	--font-mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
@@ -600,6 +600,8 @@ pre {
 
 @media (min-width: 1280px) {
 	.container {
+		padding-left: 0;
+		padding-right: 0;
 		max-width: var(--container);
 	}
 }
@@ -1069,45 +1071,25 @@ blockquote.has-text-align-right,
 	border-radius: 50%;
 }
 
+.alignwide,
 .alignfull {
-	width: 100vw;
-	max-width: 100vw;
-	margin-left: calc(50% - 50vw);
-	margin-right: calc(50% - 50vw);
+	--width: 100vw;
+	width: var(--width);
+	max-width: var(--width);
+	margin-left: calc(50% - var(--width)/2);
+	margin-right: calc(50% - var(--width)/2);
 }
 
+.alignwide .alignfull,
 .alignfull .alignfull {
 	width: 100%;
 	margin-left: 0;
 	margin-right: 0;
 }
 
-.wp-block-image.alignwide img {
-	width: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-@media (min-width: 768px) {
-	.alignwide {
-		--width: var(--container-md);
-		width: var(--width);
-		max-width: var(--width);
-		margin-left: calc(50% - var(--width)/2);
-		margin-right: calc(50% - var(--width)/2);
-	}
-}
-
-@media (min-width: 1024px) {
-	.alignwide {
-		--width: var(--container-lg);
-	}
-}
-
 @media (min-width: 1280px) {
 	.alignwide {
-		--width: var(--container-xl);
+		--width: var(--container);
 	}
 }
 
